assets/scss/uams-supporting/template-default.scss
body.page-template-default,
body.page-template-modules,
body.post-template-default,
body.archive,
body.error404,
body.search {
    .archive-description,
    .entry {
        .entry-title,
        .archive-title {
            max-width: 100%;
            margin-left: auto;
            margin-right: auto;
            width: $content-width * 1.618;
            margin-bottom: $page-title-margin-bottom-mobile;
            padding-bottom: $page-title-margin-bottom-mobile;
            position: relative;
            color: $page-title-color;
            font-family: $page-title-font-family;
            @include font-size($page-title-font-size);
            font-weight: $page-title-font-weight;
            line-height: $page-title-line-height;
            text-align: center;
    
            @include media-breakpoint-up(sm) {
                margin-bottom: $page-title-margin-bottom;
                padding-bottom: $page-title-margin-bottom;
            }

            &:after {
                content: "";
                display: block;
                width: 100%;
                height: 0.0625em;
                background-color: $page-title-border-color;
                max-width: $content-width;
                position: absolute;
                margin: 0 auto;
                bottom: 0;
                left: 0;
                right: 0;
            }
        }
    }
}

body.page-template-modules {
    .archive-description,
    .entry {
        .entry-title,
        .archive-title {
            padding-top: $uams-module-padding-mobile;
        
            @include media-breakpoint-up(sm) {
                padding-top: $uams-module-padding;
            }
        }
    }
}

body.page-template-default,
body.post-template-default,
body.archive,
body.error404,
body.search {

    .entry,
    .entry-comments,
    #respond,
    .archive-description,
    .archive-pagination {
        padding: $uams-module-padding-mobile;
        margin-bottom: 0;
    
        @include media-breakpoint-up(sm) {
            padding: $uams-module-padding;
        }
    }

    .entry {
        .entry-meta,
        .entry-content,
        .entry-footer {
            max-width: 100%;
            margin-left: auto;
            margin-right: auto;
        }

        .entry-meta {
            color: $gray-600;
            font-size: 1rem;
        }
    
        .entry-header .entry-meta  {
            margin-bottom: $font-size-base;
            text-align: left;
            width: $content-width;
        }
    
        .entry-content,
        .entry-footer {
            width: $content-width;
            text-align: left;
        }

        .entry-content {
            //.alignnone,
            //figure[class="wp-block-image"] {}

            .alignnone,
            figure[class="wp-block-image"],
            .aligncenter,
            .alignleft,
            .alignright,
            .alignwide,
            .alignfull {
                .wp-caption-text,
                figcaption {
                    display: block;
                    max-width: $figure-caption-font-size * $line-length-max;
                    margin-top: 1em;
                    margin-bottom: 0;
                    font-size: $figure-caption-font-size;
                    color: $figure-caption-color;
                }
            }

            .alignnone,
            figure[class="wp-block-image"]
            .aligncenter,
            .alignwide,
            .alignfull {
                margin: $page-title-margin-bottom-mobile 0;
            }

            .alignnone,
            figure[class="wp-block-image"],
            .alignleft,
            .alignright {
                .wp-caption-text,
                figcaption {
                    text-align: left;
                }
            }

            .aligncenter,
            .alignwide,
            .alignfull {
                .wp-caption-text,
                figcaption {
                    text-align: center;
                    margin-left: auto;
                    margin-right: auto;
                }
            }

            .aligncenter {
                width: 100% !important;
            }

            .alignwide {
                @include media-breakpoint-up(md) {
                    @include alignwide(1.309);
                }
                @include media-breakpoint-up(lg) {
                    @include alignwide(1.618);
                }
            }

            .alignfull {
                width: 100vw;
                max-width: 100vw;
                margin-left: calc( 50% - 50vw );
                margin-right: calc( 50% - 50vw );
            }

            .alignleft,
            .alignright {
                display: block;
                //width: 100% !important;
                margin: $page-title-margin-bottom-mobile auto;
                float: none;

                @include media-breakpoint-up(xs) {
                    margin: 0 0 1em 0;
                    max-width: 240px !important;
                    max-width: calc((#{$breakpoint-xs} - #{$uams-module-padding-mobile} * 3) / 2) !important;
                }

                @include media-breakpoint-up(sm) {
                    max-width: 336px !important;
                    max-width: calc((#{$breakpoint-sm} - #{$uams-module-padding-mobile} * 3) / 2) !important;
                }

                &.small {
                    @include media-breakpoint-up(md) {
                        max-width: 299px * 0.75 !important;
                        max-width: calc((#{$breakpoint-md} - #{$uams-module-padding-mobile} * 4) / 3) !important;
                    }
                }
            }

            .alignleft {
                @include media-breakpoint-up(xs) {
                    margin-right: $page-title-margin-bottom-mobile;
                    float: left;
                }
            }

            .alignright {
                @include media-breakpoint-up(xs) {
                    margin-left: $page-title-margin-bottom-mobile;
                    float: right;
                }
            }
        }
        
        .entry-footer {
            margin-top: $uams-module-padding-mobile;
            padding-top: $uams-module-padding-mobile;
            border-top: 1px solid $body-bg-border;
    
            .entry-meta {
                width: 100%;
                text-align: inherit;
            }
        }
    }

    .entry-comments {
        @extend .bg-gray;

        > h3,
        .comment-list {
            width: $content-width;
            max-width: 100%;
            margin-left: auto;
            margin-right: auto;
        }

        .comment {
            .comment-header,
            .comment-reply {
                background-color: transparent;
            }

            .comment-header {
                display: flex;
                flex-flow: row wrap;
                justify-content: flex-start;

                .comment-author {
                    width: 100%;
                    margin-bottom: 0.5em;
                }

                .comment-meta,
                .comment-edit-link {
                    white-space: nowrap;
                    font-size: 1rem;
                }

                .comment-meta {
                    padding-right: 1em;
                }
                .comment-edit-link {

                }
            }

        }

        + #respond {
        padding-top: 0;
    
        @include media-breakpoint-up(sm) {
            padding-top: 0;
        }
        }
    }

    #respond {
        @extend .bg-gray;
    
        #reply-title,
        #commentform {
            width: $content-width;
            max-width: 100%;
            margin-left: auto;
            margin-right: auto;
        }
    
        #reply-title {
            text-align: left;
        }

        .form-submit {
            #submit {
                @extend .btn-primary;
            }
        }
    }
}

body.archive,
body.search {
    .archive-description {
        + .entry {
            padding-top: 0;
        }
    }

    .entry {
        margin-bottom: 0;

        &:last-of-type {
            border-bottom: 0;
        }

        .entry-title {
            @include font-size($h2-font-size);

            &:after {
                background-color: $body-bg-border;
            }
        }

        .entry-content {
            h1 {
                @extend .h2;
            }

            h2 {
                @extend .h3;
            }

            h3 {
                @extend .h4;
            }

            h4 {
                @extend .h5;
            }

            h5 {
                @extend .h6;
            }
        }
    }

    .archive-pagination {
        background-color: $body-bg-banded;

        ul {
            margin: 0 auto;
        }
    }
}

